# rust-chromadb-pres

./: .env  .gitignore  Cargo.toml  readme.md
faktury/: faktura_0001.txt  faktura_0002.txt  faktura_0003.txt  faktura_0004.txt  faktura_0005.txt  faktura_0006.txt  faktura_0007.txt  faktura_0008.txt  faktura_0009.txt  faktura_0010.txt  faktura_0011.txt  faktura_0012.txt  faktura_0013.txt  faktura_0014.txt  faktura_0015.txt  faktura_0016.txt  faktura_0017.txt  faktura_0018.txt  faktura_0019.txt  faktura_0020.txt
src/: main.rs
