[package]
name = "rust-chromadb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chromadb = "2.2.2"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
rust-bert = "0.23.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = {version = "1.44.2", features = ["full"]}
uuid = { version = "1.17.0", features = ["v4"] }
